add spell extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,9 @@
 		"vscode": {
 			"extensions": [
 				"bungcip.better-toml",
-				"yzhang.markdown-all-in-one"
+				"yzhang.markdown-all-in-one",
+				"streetsidesoftware.code-spell-checker",
+				"streetsidesoftware.code-spell-checker-spanish"
 			]
 		}
 	}
